2003-05-21  Nick Clifton  <nickc@redhat.com>

        * config/obj-elf.c: Include dwarf2dbg.h.
        (elf_pseudo_tab): Add .file and .loc.
        * config/tc-arc.c (md_pseudo_table): Remove .file and .loc.
        * config/tc-arm.c: Likewise.
        * config/tc-h8300.c: Likewise.
        * config/tc-hppa.c: Likewise.
        * config/tc-ia64.c: Likewise.
        * config/tc-m68hc11.c: Likewise.
        * config/tc-m68k.c: Likewise.
        * config/tc-mmix.c: Likewise.
        * config/tc-mn10300.c: Likewise.
        * config/tc-ppc.c: Likewise.
        * config/tc-sh.c: Likewise.
        * config/tc-sparc.c: Likewise.
        * config/tc-v850.c: Likewise.
        * config/tc-frv.c: Likewise, and remove redundant inclusion of
        dwarf2dbg.h.
        * config/tc-ip2k.c: Likewise.
        * config/tc-iq2000.c: Likewise.
        * config/tc-xstormy16.c: Likewise.
        * config/tc-xtensa.c: Likewise.
	* Makefile.am: Regenerate dependencies.
        * Makefile.in: Regenerate.
        * aclocal.m4: Regenerate.
        * config.in: Regenerate.
        * configure: Regenerate.
        * po/POTFILES.in: Regenerate.
        * po/gas.pot: Regenerate.
               
2003-05-21  Nick Clifton  <nickc@redhat.com>

	* dw2gencfi.c (cfi_get_label): Use symbol_make for non
	BFD_ASSEMBLER targets.
	(cfi_startproc): Change type of saved_seg and cfi_seg to segT.
	(dot_cfi_endproc): Only call bfd_set_section_flags for targets
	defining BFD_ASSEMBLER.

2003-05-20  Michal Ludvig  <mludvig@suse.cz>

	* as.c (main): Remove tc_cfi_init().
	* dw2gencfi.c (cfi_parse_arg): Allow regnames beginning 
	with '%'.
	(cfi_pseudo_table): Add "cfi_register" entry.
	(cfi_make_insn): Handle CFA_register.
	(cfi_output_insn): Ditto.
	(dot_cfi): Ditto.
	(cfi_get_label): Add 'simple' modifier to .cfi_startproc.
	(dot_cfi_endproc): Reuse already emitted CIEs.
	* testsuite/gas/cfi/cfi-i386.d: New pattern.
	* testsuite/gas/cfi/cfi-x86-64.d: Ditto.

2003-05-20  Nick Clifton  <nickc@redhat.com>
